--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
             ];
 
             function updateCompetitionsDisplay(selectedAgeGroup) {
-                const competitionsElement = document.getElementById('competitions');
+                const competitionsElement = document.getElementById('competitionsContainer');
                 competitionsElement.innerHTML = ''; // Clear existing elements
             
                 // Iterate through competitions based on the selected age group
