--- a/index.html
+++ b/index.html
@@ -294,21 +294,20 @@
                             </div>
                             <p>Please check the appropriate option! &nbsp</p>
                             <strong>Option 1 :</strong>
-                            <p>If this is the <strong>first registration from your flat</strong> OR if you are registering <strong>again to host a Food stall</strong>, select this option, 
+                            <p>If this is the <strong>first</strong> registration from your flat for <strong>event participation</strong> or <strong>hosting a food stall</strong>, select this option, 
                                 make the payment and attach payment screenshot.</p>
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" name="paymentOption" id="option1" value="I will pay for my flat now." />
-                                <label class="form-check-label" for="option1">I will pay for my flat now (for participation/food stall).</label>
+                                <input class="form-check-input" type="radio" name="paymentOption" id="option1" value="I will pay for participation and/or food stall now." />
+                                <label class="form-check-label" for="option1">I will pay for participation and/or food stall now.</label>
                             </div>
                             <div class="dividerthin"></div>
                             <strong>Option 2 :</strong>
                             <p>
-                                If you are submitting another form for another participant from your flat to participate in competitions, and have <strong>already made a payment of Rs.600 
-                                for your flat</strong>, select this option, skip the payment and re-attach original payment screenshot.
+                                If you are registering <strong>again</strong> for another participant from your flat, and have <strong>already paid Rs.600</strong>, select this option, skip the payment and re-attach original payment screenshot.
                             </p>
                             <div class="form-check">
                                 <input class="form-check-input" type="radio" name="paymentOption" id="option2" value="I have already made a payment for my flat." />
-                                <label class="form-check-label" for="option2">I have already made a payment for my flat (for participation/food stall).</label>
+                                <label class="form-check-label" for="option2">I have already made a payment for my flat.</label>
                             </div>
                             <div class="dividerthin"></div>
                             <div class="mb-3">
@@ -316,7 +315,7 @@
                                 <ul class="bullet-points">
                                     <li>Go to "Z1 Apartments Facilities" account on the top left</li>
                                     <li>Select Dues => Pay advance => Paying to "Winterfest 2024"</li>
-                                    <li>Choose amount Rs. 600/ 700/ both and proceed with payment</li>
+                                    <li>Pay amount i.e. Rs. 600/ 700/ or more depending on your selections</li>
                                 </ul>
                                 <p style="color: #a63a50;">
                                     <strong>(Alternate method) Pay via UPI:</strong>
@@ -506,10 +505,10 @@
                         { name: "Dance", ageGroups: ["3to5yrs"], teamBased: false, displayAgeGroups: "" },
                         { name: "Dance-Bollywood", ageGroups: ["6to10yrs", "11to16yrs", "17to29yrs", "30to35yrs", "36to49yrs", "50to55yrs", "56Yrsabove"], teamBased: false, displayAgeGroups: "" },
                         { name: "Dance-Classical", ageGroups: ["6to10yrs", "11to16yrs", "17to29yrs", "30to35yrs", "36to49yrs", "50to55yrs", "56Yrsabove"], teamBased: false, displayAgeGroups: "" },
-                        //{ name: "DJ Night", ageGroups: ["3to5yrs", "6to10yrs", "11to16yrs", "17to29yrs", "30to35yrs", "36to49yrs", "50to55yrs", "56Yrsabove"], teamBased: false, displayAgeGroups: "" },
+                        { name: "DJ Night", ageGroups: ["6to10yrs", "11to16yrs", "17to29yrs", "30to35yrs", "36to49yrs", "50to55yrs", "56Yrsabove"], teamBased: false, displayAgeGroups: "" },
                         { name: "Drawing", ageGroups: ["3to5yrs", "6to10yrs", "11to16yrs"], teamBased: false, displayAgeGroups: "" },
                         { name: "Fancy Dress", ageGroups: ["3to5yrs", "6to10yrs", "11to16yrs"], teamBased: false, displayAgeGroups: "" },
-                        //{ name: "Karaoke Night", ageGroups: ["3to5yrs", "6to10yrs", "11to16yrs", "17to29yrs", "30to35yrs", "36to49yrs", "50to55yrs", "56Yrsabove"], teamBased: false, displayAgeGroups: "" },
+                        { name: "Karaoke Night", ageGroups: ["6to10yrs", "11to16yrs", "17to29yrs", "30to35yrs", "36to49yrs", "50to55yrs", "56Yrsabove"], teamBased: false, displayAgeGroups: "" },
                         { name: "Master Chef (Cooking without fire)", ageGroups: ["11to16yrs"], teamBased: false, displayAgeGroups: "" },
                         { name: "Master Chef", ageGroups: ["17to29yrs", "30to35yrs", "36to49yrs", "50to55yrs", "56Yrsabove"], teamBased: false, displayAgeGroups: "" },
                         { name: "Musical Instrument", ageGroups: ["3to5yrs", "6to10yrs", "11to16yrs", "17to29yrs", "30to35yrs", "36to49yrs", "50to55yrs", "56Yrsabove"], teamBased: false, displayAgeGroups: "" },
@@ -530,7 +529,7 @@
                         { name: "Price is Right", ageGroups: ["6to10yrs", "11to16yrs", "17to29yrs", "30to35yrs", "36to49yrs", "50to55yrs", "56Yrsabove"], teamBased: false, displayAgeGroups: "" },
                         { name: "Sack Race", ageGroups: ["6to10yrs", "11to16yrs", "17to29yrs", "30to35yrs", "36to49yrs", "50to55yrs", "56Yrsabove"], teamBased: false, displayAgeGroups: "" },
                         { name: "Slow cycling", ageGroups: ["6to10yrs", "11to16yrs", "17to29yrs", "30to35yrs", "36to49yrs", "50to55yrs", "56Yrsabove"], teamBased: false, displayAgeGroups: "" },
-                        //{ name: "Tambola", ageGroups: ["3to5yrs", "6to10yrs", "11to16yrs", "17to29yrs", "30to35yrs", "36to49yrs", "50to55yrs", "56Yrsabove"], teamBased: false, displayAgeGroups: "" },
+                        { name: "Tambola", ageGroups: ["6to10yrs", "11to16yrs", "17to29yrs", "30to35yrs", "36to49yrs", "50to55yrs", "56Yrsabove"], teamBased: false, displayAgeGroups: "" },
                         { name: "Treasure Hunt (Teams of 4)", ageGroups: ["6to10yrs", "11to16yrs", "17to29yrs", "30to35yrs", "36to49yrs", "50to55yrs", "56Yrsabove"], teamBased: true, displayAgeGroups: "6-10, 11-16, 17-35, 36-55, 56 & above" },
                         { name: "Tug of War (Teams of 6)", ageGroups: ["6to10yrs", "11to16yrs", "17to29yrs", "30to35yrs", "36to49yrs", "50to55yrs", "56Yrsabove"], teamBased: true, displayAgeGroups: "Up to 16, 17 & above"  },
                     ],
