--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
             
             function updateTotalAmountDisplay() {
                 const option1Selected = document.getElementById('option1').checked;
-                const totalContainer = document.getElementById('totalStallCharge');
+                const totalContainer = document.getElementById('totalCharge');
             
                 if (option1Selected) {
                     const total = calculateFoodStallCount()*700 + 600;
