--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
                 totalContainer.style.display = 'none'; 
                 if (option1Selected) {
                     const total = calculateFoodStallCount()*700 + 600;
-                    totalContainer.textContent = `Total for Food Stalls: INR ${total}`;
+                    totalContainer.textContent = `Total Amount to be paid: INR ${total}`;
                     totalContainer.style.display = 'block'; 
                 }
             }
